2.4.0:

2004-04-11  Murray Cumming  <murrayc@murrayc.com>

	* atk/src/: Added implementor.[hg|ccg] to wrap the AtkImplementorIface.
	* gtk/src/widget.hg: Widget inherits from the Implementor interface
	as well as Gtk::Object.

2004-04-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm.h: #include treemodelsort.h and treemodelfilter.h
	* gtk/src/menu.hg: popup(): Wrap the C callback as a Slot, so we do
	not need to include gtkmenu.h.
	* gtk/src/iconinfo.hg: Do not include gtkiconinfo.h.
	* gtk/src/notebook.hg: Do not include gtknotebook.h
	* gtk/src/stockitem.hg: Do not include gtkstockitem.h
	* gtk/src/texttag.hg: Do not include gtktexttag.h

2004-04-09  Murray Cumming  <murrayc@murrayc.com>

	* toolbar.hg: Added get_tooltips_object() accessor, which should let
	us set tooltips on toolbar objects.

2004-04-09  Murray Cumming  <murrayc@murrayc.com>

	* filefilter.hg: Create a FileFilter::Info class to use in place of
	GtkFileFilterInfo, in the add_custom() callbak . Removed filter(), 
	because it is not needed and because it is difficult to wrap.

2004-04-08  Bryan Forbes  <bryan@reigndropsfall.net>

	* gtk/gtkmm.h: include gtkmm/settings.h.

2.3.8

2004-04-09  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/action.hg: Added set_tooltip().

2004-04-07  Bryan Forbes  <bryan@reigndropsfall.net>

	* gtk/src/icontheme.hg: added refreturns for get_default and get_for_screen.
	* gtk/src/settings.hg: added unwrapped properties.
	* gtk/src/targetlist.[hg|ccg]: added a create method that wraps
	gtk_target_list_new.

2004-04-07  Murray Cumming  <murrayc@murrayc.com>

	* Removed some TODO comments that are no longer relevant.

2004-04-03  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodel.[hg|ccg]: Rename 2 of the 3 foreach() overloads
	to foreach_iter() and foreach_path(), because they are ambiguous with
	libsigc++ 2.

2004-04-03  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/liststore.[hg|ccg], treestore.[hg|ccg]: Added insert_after(),