@@ -32,10 +32,12 @@ _PINCLUDE(gtkmm/private/item_p.h)
 namespace Gtk
 {
 
+
 /** An item in a ComboDropDownList.
  * 
  * Items in a ComboDropDownList inherit Item. Two signals are added.
  *
+ * @deprecated Use the ComboBox widget instead. 
  * @ingroup Widgets
  */
 class ComboDropDownItem : public Gtk::Item
@@ -76,6 +78,7 @@ class Combo;
  * and remove items use the STL-style interface that is accessible through
  * ComboDropDown::children().
  *
+ * @deprecated Use the ComboBox widget instead.
  * @ingroup Widgets
  */
 class ComboDropDown : public Gtk::Container
@@ -123,6 +126,7 @@ class Window;
  *
  * Access members allow altering of the widget components.
  *
+ * @deprecated Use the ComboBox widget instead.
  * @ingroup Widgets
  */
 class Combo : public HBox
@@ -189,6 +193,7 @@ public:
   _WRAP_PROPERTY("allow-empty", bool)
   _WRAP_PROPERTY("value-in-list", bool)
 };
+
 
 } /* namespace Gtk */
 
