@@ -43,6 +43,7 @@ namespace Gtk
  * history menu. Alternatively, the TAB key can be used to navigate using
  * filename completion - common in text based editors such as emacs and jed.
  *
+ * @deprecated Use the FileChooserDialog instead.
  * @ingroup Dialogs
  */
 class FileSelection : public Dialog
@@ -93,6 +94,7 @@ public:
   _WRAP_PROPERTY("filename", std::string)
   _WRAP_PROPERTY("select_multiple", bool)
 };
+
 
 } // namespace Gtk
 
