@@ -55,7 +55,7 @@ public:
   typedef sigc::slot<void, int&, int&, bool&> SlotPositionCalc;
              
   void popup(MenuShell& parent_menu_shell, MenuItem& parent_menu_item, const SlotPositionCalc& slot, guint button, guint32 activate_time);
-  _IGNORE(gtk_menu_popup);
+  _IGNORE(gtk_menu_popup)
 
   /** Displays a menu and makes it available for selection.  Applications can use
    * this function to display context-sensitive menus.
