@@ -51,7 +51,7 @@ OptionMenu::~OptionMenu()
   destroy_();
 }
 
-void OptionMenu::init_accels_handler_(void)
+void OptionMenu::init_accels_handler_()
 {
   if(gobj())
   {
