@@ -35,6 +35,7 @@ class Menu;
  * activated the GtkOptionMenu displays a popup Gtk::Menu which allows the
  * user to make a new choice. 
  *
+ * @deprecated Use the ComboBox widget instead.
  * @ingroup Widgets
  */
 class OptionMenu : public Button
@@ -55,7 +56,7 @@ public:
   _WRAP_SIGNAL(void changed(), "changed")	
 
 private:
-  void init_accels_handler_(void);
+  void init_accels_handler_();
 };
 
 } /* namespace Gtk */
