@@ -1,3 +1,12 @@
+2004-04-17  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/optionmenu.hg, fileselection.hg, combo.hg: Mark them as 
+	deprecated in the docs, by using the Doxygen @deprecated command.
+
+2004-04-17  Murray Cumming  <murrayc@murrayc.com>
+
+	* Removed some extra semi-colons detected by gcc 3.4 from cvs.
+
 2.4.0:
 
 2004-04-11  Murray Cumming  <murrayc@murrayc.com>
@@ -430,7 +439,7 @@
 
 2004-02-27  Murray Cumming  <murrayc@murrayc.com>
 
-	* gtk/src/treepath.hg: append<>(): Corrected a typo that is detectec by
+	* gtk/src/treepath.hg: append<>(): Corrected a typo that is detected by
 	gtk++ 3.4 prereleases and would have been detected before if this 
 	template method had been used. Bug #131928 by Matthew Tuck.  
 
